# assistant-cli

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
.claude/: ralph-loop.local.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: auth.rs  clipboard.rs  config.rs  embedded_term.rs  github.rs  images.rs  issues.rs  lib.rs  list.rs  llm.rs  login_screen.rs  main.rs  markdown.rs  project_select.rs  test_helpers.rs  tui.rs  tui_draw.rs  tui_events.rs  tui_image.rs  tui_types.rs  tui_utils.rs
src/agents/: claude.rs  mod.rs  opencode.rs  session.rs  traits.rs  worktree.rs
src/commands/: mod.rs  registry.rs  render.rs  shortcuts.rs  slash.rs  types.rs
src/tui_events/: agents.rs  command.rs  common.rs  create.rs  detail.rs  dispatch.rs  embedded.rs  filters.rs  help.rs  list.rs  mod.rs  pr.rs  project.rs  search.rs  worktree.rs
