[package]
name = "assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-core = "0.3"
futures-util = "0.3"
crossterm = "0.29.0"
reedline = "0.44.0"
octocrab = "0.49.3"
dotenvy = "0.15.7"
dirs = "6"
open = "5"
keyring = { version = "3", features = ["apple-native"] }
dialoguer = "0.11"
ratatui = "0.30"
regex = "1"
image = "0.25"
ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
fuzzy-matcher = "0.3.7"

[dev-dependencies]
wiremock = "0.6"
