[package]
name = "assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.29.0"
octocrab = "0.49.3"
dotenvy = "0.15.7"
dirs = "6"
open = "5"
ratatui = "0.30"
regex = "1"
image = "0.25"
ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
fuzzy-matcher = "0.3.7"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
portable-pty = "0.9.0"
vt100 = "0.16.2"

[dev-dependencies]
wiremock = "0.6"
